@@ -22,11 +22,21 @@ package ball.maven.plugins.javadoc;
  */
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.Arrays;
+import java.util.NoSuchElementException;
+import java.util.Set;
+import java.util.TreeMap;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import lombok.Data;
 import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.text.StringSubstitutor;
+import org.apache.commons.text.lookup.StringLookup;
 import org.apache.maven.artifact.Artifact;
 import org.apache.maven.shared.artifact.filter.StrictPatternIncludesArtifactFilter;
+
+import static java.util.Arrays.asList;
+import static java.util.stream.Collectors.toSet;
 
 /**
  * {@code <link/>} parameter.
@@ -36,13 +46,16 @@ import org.apache.maven.shared.artifact.filter.StrictPatternIncludesArtifactFilt
  * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
  * @version $Revision$
  */
-@Data
+@Data @Slf4j
 public class Link {
+    private static final Pattern NUMBER = Pattern.compile("[0-9]+");
+    private static final Pattern DOT = Pattern.compile("[.]");
+
     private String artifact = null;
     private URL url = null;
     @Getter(lazy = true)
     private final StrictPatternIncludesArtifactFilter filter =
-        new StrictPatternIncludesArtifactFilter(Arrays.asList(artifact.split("[,\\p{Space}]+")));
+        new StrictPatternIncludesArtifactFilter(asList(artifact.split("[,\\p{Space}]+")));
 
     /**
      * See {@link StrictPatternIncludesArtifactFilter#include(Artifact)}.
@@ -65,17 +78,83 @@ public class Link {
         URL url = getUrl();
 
         if (url != null && artifact != null) {
+            TreeMap<String,String> map = new MapImpl(artifact);
+            StringSubstitutor substitutor = new StringSubstitutor((StringLookup) map, "{", "}", '\\');
+
+            substitutor.setEnableSubstitutionInVariables(true);
+
+            String string = url.toString();
+
             try {
-                url =
-                    new URL(url.toString()
-                            .replaceAll("(?i)[{]g[}]", artifact.getGroupId())
-                            .replaceAll("(?i)[{]a[}]", artifact.getArtifactId())
-                            .replaceAll("(?i)[{]v[}]", artifact.getVersion()));
+                url = new URL(substitutor.replace(string));
             } catch (MalformedURLException exception) {
                 throw new IllegalArgumentException(exception);
+            } catch (NoSuchElementException exception) {
+                throw new IllegalArgumentException(String.format("No value defined for '%s' in '%s'",
+                                                                 exception.getMessage(), string));
             }
         }
 
         return url;
+    }
+
+    private class MapImpl extends TreeMap<String,String> implements StringLookup {
+        private static final long serialVersionUID = -1285467833760198210L;
+
+        public MapImpl(Artifact artifact) {
+            super(String.CASE_INSENSITIVE_ORDER);
+
+            put("groupId", artifact.getGroupId());
+            put("artifactId", artifact.getArtifactId());
+            put("version", artifact.getBaseVersion());
+
+            put("g", get("groupId"));
+            put("a", get("artifactId"));
+            put("v", get("version"));
+
+            String version = get("version");
+
+            for (String key : asList("major", "minor", "micro", "patch")) {
+                Matcher matcher = NUMBER.matcher(version);
+
+                if (matcher.lookingAt()) {
+                    put(key, matcher.group());
+                    version = version.substring(matcher.group().length());
+                } else {
+                    break;
+                }
+
+                matcher = DOT.matcher(version);
+
+                if (matcher.lookingAt()) {
+                    version = version.substring(matcher.group().length());
+                    continue;
+                } else {
+                    break;
+                }
+            }
+        }
+
+        @Override
+        public String lookup(String key) {
+            String value = get(key);
+
+            if (value == null) {
+                String prefix = key.toLowerCase();
+                Set<String> set =
+                    tailMap(key).entrySet().stream()
+                    .filter(t -> t.getKey().startsWith(prefix))
+                    .map(t -> t.getValue())
+                    .collect(toSet());
+
+                if (set.size() == 1) {
+                    value = set.iterator().next();
+                } else {
+                    throw new NoSuchElementException(key);
+                }
+            }
+
+            return value;
+        }
     }
 }
