@@ -1,3 +1,9 @@
+2021-11-05  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/maven/plugins/javadoc/Link.java:
+	Added support for "major", "minor", "micro", and "patch"
+	placeholders in URI template.
+
 2021-10-22  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Started development of 1.2.0-SNAPSHOT.
